Bugfixes and updates:
- Add: address checksum to addresses in Account settings
- Fix: Transaction details rebroadcast button layout broken
- Add: Linux missing dependencies tutorial

--- a/src/desktop/src/ui/components/input/input.scss
+++ b/src/desktop/src/ui/components/input/input.scss
@@ -165,11 +165,12 @@
         align-items: center;
         position: absolute;
         top: 100%;
+        left: 14px;
         padding: 16px 0 0 0;
         font-size: 12px;
         line-height: 12px;
         span {
-            margin: -2px 4px 0 0;
+            margin: -2px 6px 0 0;
         }
         &:hover {
             color: var(--primary);
